--- a/app/src/main/res/navigation/news_nav_graph.xml
+++ b/app/src/main/res/navigation/news_nav_graph.xml
@@ -45,6 +45,6 @@
         android:label="ArticleFragment" >
         <argument
             android:name="article"
-            app:argType="com.androiddevs.mvvmnewsapp.models.Article" />
+            app:argType="com.androiddevs.mvvmnewsapp.data.models.Article" />
     </fragment>
 </navigation>
